@@ -1,3 +1,10 @@
+2012-06-15  6.7.7-8 Anthony Thyssen <A.Thyssen@griffith...>
+  * Geomerty arguments accept multiple sign character for offsets
+    EG: "-10-10", "-+10-+10", or "+-10+-10" generate negtive offsets
+    while "+10+10", "++10++10", or "--10--10" generate positive offsets
+    that is you can not only optionally have a sign in offset variable
+    substitutions, but can negate that substitution if you so desire.
+
 2012-06-12  6.7.7-8 Nicolas Robidoux <nicolas.robidoux@gmail...>
   * Refactor Catmull-Rom and Spline "interpolation" using
     state-of-the-art unpublished formulas
